[gd_scene load_steps=8 format=3 uid="uid://c4gdidyigamyg"]

[ext_resource type="PackedScene" uid="uid://c8t036440xf3" path="res://scenes/player_3d.tscn" id="1_bra6t"]
[ext_resource type="Environment" uid="uid://0raosp1j8p3b" path="res://themes/world_environment.tres" id="1_emfxv"]
[ext_resource type="Script" uid="uid://brdnf33e5100r" path="res://scripts/wall_hang_test.gd" id="1_g3v8v"]
[ext_resource type="Material" uid="uid://woy3v4cv6ld" path="res://themes/static_test_platform.tres" id="2_k5h1v"]
[ext_resource type="PackedScene" uid="uid://cfcdfh2hxyn7a" path="res://scenes/growing_platform_3d.tscn" id="3_k5h1v"]
[ext_resource type="PackedScene" uid="uid://vtkc3myfd1i6" path="res://scenes/checkpoint_respawn_3d.tscn" id="4_nklnq"]
[ext_resource type="PackedScene" uid="uid://d2rnwb6em08gc" path="res://scenes/death_plane_3d.tscn" id="5_lcsj7"]

[node name="WallHangTest" type="Node3D"]
script = ExtResource("1_g3v8v")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_emfxv")

[node name="Player3D" parent="." instance=ExtResource("1_bra6t")]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(13, 1, 10)
material = ExtResource("2_k5h1v")

[node name="GrowingPlatform3D" parent="." instance=ExtResource("3_k5h1v")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 8, 5, 0)

[node name="GrowingPlatform3D2" parent="." instance=ExtResource("3_k5h1v")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -9, 5, 0)

[node name="CheckpointRespawn3D" parent="." instance=ExtResource("4_nklnq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
size = Vector3(10, 10, 10)

[node name="DeathPlane3D" parent="." instance=ExtResource("5_lcsj7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -24, 0)
size = Vector3(100, 10, 100)

[connection signal="player_entered" from="DeathPlane3D" to="." method="_on_death_plane_3d_player_entered"]
